# Graphics-Assignment-2

./: .gitignore  CMakeLists.txt
include/: camera.hpp  environment.hpp  heightmap.hpp  light.hpp  object.hpp  objectLoader.hpp  sky.hpp  sphere.hpp  texture.hpp
src/: camera.cpp  environment.cpp  fragment-shader.txt  heightmap.cpp  light.cpp  main.cpp  object.cpp  sky.cpp  sphere.cpp  vertex-shader.txt
src/tdogl/: Program.cpp  Program.h  Shader.cpp  Shader.h
